--- a/Clase-8/Position/index.html
+++ b/Clase-8/Position/index.html
@@ -13,5 +13,12 @@
       <div class="hijo"></div>
     </div>
     <div class="wsp"></div>
+    <div>
+    <div>
+      <section>
+        <img src="/Clase-8/Tarea-clase8/imagenes/ine-2x.png" alt="">
+      </section>
+    </div>
+    <div><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio dolore dolorum exercitationem aut modi facilis porro eaque architecto suscipit enim, ea adipisci recusandae officia sint consectetur laborum at accusantium veritatis nesciunt illo ipsa soluta. Quaerat, laudantium aspernatur eveniet id quae impedit in aperiam. Veniam, maiores dolor, deserunt saepe ab beatae corrupti, fugit minima autem enim expedita possimus? Unde sint minima reprehenderit, dolorum veritatis voluptatum animi error, nihil rerum cum vero enim! Quibusdam deserunt eius assumenda dolor saepe maiores voluptates accusamus, iusto maxime enim quo? Inventore amet nesciunt provident praesentium officia, harum minus sequi nostrum! Cum aliquid excepturi quis nesciunt unde quidem recusandae quae molestias? Minus iste, doloremque sapiente cumque quae aliquid, nulla earum dicta deleniti quidem ad voluptatibus perferendis odio repellendus. Magni adipisci corrupti provident iste, eligendi velit. Corrupti harum cumque reiciendis eos autem sapiente quam, quisquam, ab ipsa in vel iusto illum distinctio quasi iure accusamus et voluptate ad impedit corporis. Perspiciatis, hic totam aspernatur possimus esse, reprehenderit libero, quibusdam qui debitis mollitia aperiam aliquam vitae corrupti! Quis inventore modi voluptas praesentium eaque esse officia neque quae excepturi dolorem rerum nesciunt sed accusantium expedita magnam libero culpa, beatae blanditiis. Expedita cum atque fuga totam ullam quis reiciendis tenetur commodi. Quam asperiores, porro excepturi sed repudiandae sapiente, voluptates, animi saepe fugiat reprehenderit est voluptatum dolorum incidunt rem ab. Eum inventore minima officiis atque esse quo expedita laudantium. Et cumque suscipit ea nesciunt illo error quis provident a voluptatum, temporibus velit iure reiciendis commodi corporis dolore numquam sequi odio asperiores, quod saepe! Molestiae veniam commodi architecto explicabo voluptas unde enim minus eum earum. Asperiores, mollitia veritatis accusamus iusto totam commodi aliquam! Molestias sint, dolores cupiditate voluptas, nesciunt inventore quis minus pariatur magni, nihil fugiat ducimus aspernatur tenetur ad dignissimos deserunt asperiores. Blanditiis nesciunt porro officia molestias voluptatum sint quidem dolores autem!</p></div>
   </body>
 </html>
