--- a/Clase-8/Tarea-clase8/index.html
+++ b/Clase-8/Tarea-clase8/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
   </head>
+
   <body>
     <main>
       <section>
         <h2 class="title">Historias destacadas de clientes</h2>
+
         <div class="cards">
           <!-- Ine Agresta Card -->
           <div class="card">
             <div class="card-info">
               <div class="info-stars">
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
               </div>
               <div class="review-text">
                 <p>
@@ -41,78 +43,82 @@
               <div class="user-pic">
                 <img src="./imagenes/ine-2x.png" alt="Ine Agresta" />
               </div>
-            </div>
-            <div class="user-name">
-              <h3>Ine Agresta</h3>
-              <span> Artista Independiente </span>
-            </div>
-          </div>
-        </div>
-        <!-- Jhon Ortega Card -->
-        <div class="card">
-          <div class="card-info">
-            <div class="info-stars">
-              <i class="bi bi-star"></i>
-              <i class="bi bi-star"></i>
-              <i class="bi bi-star"></i>
-              <i class="bi bi-star"></i>
-              <i class="bi bi-star"></i>
-            </div>
-            <div class="review-text">
-              <p>
-                Estaba buscando una empresa de hosting que fuera muy intuitiva
-                para principiantes y bien configurada para un bien rendimiento.
-              </p>
-            </div>
-            <div class="history-text">
-              <a
-                href="https://www.hostinger.es/blog/ine-agresta-lleva-su-negocio-a-internet-con-hostinger?_ga=2.115742918.173637065.1715169545-936118564.1715169545&_gl=1*2qeopq*_gcl_au*MzEzMDM5MzU3LjE3MTUxNjk1NDY."
-                target="_blank"
-                >Leer la noticia completa</a
-              >
+              <div class="user-name">
+                <h3>Ine Agresta</h3>
+                <span> Artista Independiente </span>
+              </div>
             </div>
           </div>
-          <div class="user-info">
-            <div class="user-pic">
-              <img src="./imagenes/ine-2x.png" alt="Jhon-Pic" />
-            </div>
-            <div class="user-name">
-              <h3>Jhon Ortega</h3>
-              <span> Emprendedor </span>
-            </div>
-          </div>
-        </div>
-        <!-- Alejandro Gonzalez Card -->
-        <div class="card">
-          <div class="card-info">
+          <!-- Jhon Ortega Card -->
+          <div class="card">
+            <div class="card-info">
               <div class="info-stars">
-                  <i class="bi bi-star-fill star"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
               </div>
               <div class="review-text">
-                  <p>
-                      El instalador de WordPress de un clic de Hostinger me ayuda a configurar la plataforma y el sitio web rápidamente.
-                  </p>
-                </div>
-                <div class="history-text">
-                    <a href="https://www.hostinger.es/blog/ine-agresta-lleva-su-negocio-a-internet-con-hostinger?_ga=2.115742918.173637065.1715169545-936118564.1715169545&_gl=1*2qeopq*_gcl_au*MzEzMDM5MzU3LjE3MTUxNjk1NDY." target="_blank">Leer la noticia completa</a>
-                </div>
+                <p>
+                  Estaba buscando una empresa de hosting que fuera muy intuitiva
+                  para principiantes y bien configurada para un bien
+                  rendimiento.
+                </p>
+              </div>
+              <div class="history-text">
+                <a
+                  href="https://www.hostinger.es/blog/ine-agresta-lleva-su-negocio-a-internet-con-hostinger?_ga=2.115742918.173637065.1715169545-936118564.1715169545&_gl=1*2qeopq*_gcl_au*MzEzMDM5MzU3LjE3MTUxNjk1NDY."
+                  target="_blank"
+                  >Leer la noticia completa</a
+                >
+              </div>
             </div>
             <div class="user-info">
-                <div class="user-pic">
-                    <img src="./imagenes/ine-2x.png" alt="Alejandro-Pic">
-                </div>
-                <div class="user-name">
-                    <h3>
-                        Alejandro González
-                    </h3>
-                    <span>
-                        Desarrollador freelance de WordPress
-                    </span>
-                </div>
+              <div class="user-pic">
+                <img src="./imagenes/ine-2x.png" alt="Jhon-Pic" />
+              </div>
+              <div class="user-name">
+                <h3>Jhon Ortega</h3>
+                <span> Emprendedor </span>
+              </div>
+            </div>
+          </div>
+          <!-- Alejandro Gonzalez Card -->
+          <div class="card">
+            <div class="card-info">
+              <div class="info-stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
+              <div class="review-text">
+                <p>
+                  El instalador de WordPress de un clic de Hostinger me ayuda a
+                  configurar la plataforma y el sitio web rápidamente.
+                </p>
+              </div>
+              <div class="history-text">
+                <a
+                  href="https://www.hostinger.es/blog/ine-agresta-lleva-su-negocio-a-internet-con-hostinger?_ga=2.115742918.173637065.1715169545-936118564.1715169545&_gl=1*2qeopq*_gcl_au*MzEzMDM5MzU3LjE3MTUxNjk1NDY."
+                  target="_blank"
+                  >Leer la noticia completa</a
+                >
+              </div>
+            </div>
+            <div class="user-info">
+              <div class="user-pic">
+                <img src="./imagenes/ine-2x.png" alt="Alejandro-Pic" />
+              </div>
+              <div class="user-name">
+                <h3>Alejandro González</h3>
+                <span> Desarrollador freelance de WordPress </span>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
