--- a/Clase-20/fetch.html
+++ b/Clase-20/fetch.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <div id="contenedorPost">
-    <h3 id="title"></h3>
-    <p class="parrafo"></p>
-    <button></button>
-  </div>
+  <div id="contenedorPost"></div>
   <body>
     <script src="./fetch.js"></script>
   </body>
